# q2-snp-callers

./: .gitattributes  LICENSE  pyproject.toml  setup.cfg
q2-gatk/: setup.py
q2-gatk/q2_gatk/: plugin_setup.py
q2_snp_callers/: _version.py  plugin_setup.py
q2_snp_callers/actions/: __init__.py
q2_snp_callers/actions/gatk/: haplotype_caller.py
