
[metadata]
name = q2-snp-callers
url = github.com/TGenNorth/q2-snp-callers
license = Academic and Research License
author = Chase Ridenour
author_email = cridenour@tgen.org
description = snp-callers is a qiime2 pipeline

[options]
packages =
	find:
python_requires = >=3.6
zip_safe = no

[options.packages.find]
exclude =
	runinfo*

[options.entry_points]
qiime2.plugins =
	q2-snp-callers = q2_snp_callers.plugin_setup:plugin


[versioneer]
VCS = git
style = pep440
versionfile_source = q2_snp_callers/_version.py
versionfile_build = q2_snp_callers/_version.py
tag_prefix = 0.0.1
parentdir_prefix = q2-snp-callers